<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodlergic.ui.home.ScanMyFood"
        android:label="@string/title_home"
        tools:layout="@layout/activity_scan_my_food" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.foodlergic.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_mylergic" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.foodlergic.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/activity_userprofile" />
</navigation>